--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hola
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Using SVG as an object</title>
+    <link href="index.css" rel="stylesheet" />
+  </head>
+  <body>
+    <object data="coffee.svg" width="300" height="300"> </object>
+  </body>
+</html>
