--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <object data="coffee.svg" width="300" height="300"> </object>
+    <object data="coffee.svg" width="40%" height="40%"> </object>
   </body>
 </html>
