--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Using SVG as an object</title>
+    <title>Coffee</title>
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <object data="coffee.svg" width="65%" height="65%" vertical-align: middle> </object>
+    <object data="coffee.svg" width="50%" height="50%" vertical-align: middle; margin-left: auto;
+  margin-right: auto> </object>
   </body>
 </html>
