--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Coffee</title>
   </head>
   <body>
-    <object data="coffee.svg" width="50%" height="50%" vertical-align: middle; margin-left: auto;
+    <style="margin-left:auto;margin-right:auto;vertical-align:middle;">
+      <object data="coffee.svg" width="50%" height="50%" vertical-align: middle; margin-left: auto;
   margin-right: auto> </object>
+    </style>
   </body>
 </html>
