--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Coffee</title>
   </head>
   <body>
-    <style="margin-left:auto;margin-right:auto;vertical-align:middle;">
-      <object data="coffee.svg" width="35%" height="35%" vertical-align: middle; margin-left: auto;
-  margin-right: auto> </object>
-    </style>
+      <object data="coffee.svg" width="35%" height="35%" align: middle; vertical-align: middle> </object>
   </body>
 </html>
