--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Coffee</title>
   </head>
   <body>
-      <object data="coffee.svg" width="15%" height="15%" align="middle"> </object>
+      <object data="coffee.svg" width="15%" height="15%"> </object>
   </body>
 </html>
