--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Coffee</title>
   </head>
   <body>
+    <div class="coffee">
       <object data="coffee.svg" width="15%" height="15%"> </object>
+    </div>  
   </body>
 </html>
