--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="coffee">
-      <object data="coffee.svg" width="15%" height="15%"> </object>
+      <object data="coffee.svg"> </object>
     </div>  
   </body>
 </html>
