--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <title>Coffee</title>
   </head>
   <body>
-    <div class="coffee">
-      <object data="coffee.svg"> </object>
-    </div>  
+    <object class="coffee" data="coffee.svg"> </object>
   </body>
 </html>
