--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Coffee</title>
   </head>
   <body>
-    <object class="coffee" data="coffee.svg"> </object>
+    <div class="coffee">
+      <object data="coffee.svg"> </object>
+    </div>
   </body>
 </html>
