--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Coffee</title>
   </head>
   <body>
-    <div class="coffee">
-      <object data="coffee.svg"> </object>
+    <div id="coffee">
+      <object id="cup" data="coffee.svg"> </object>
     </div>
   </body>
 </html>
