--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="coffee.svg" type="image/svg+xml">
     <title>Coffee</title>
   </head>
   <body>
     <div class="coffee">
-      <object id="firstcup" data="coffee.svg"> </object>
+      <object id="firstcup" data="coffee.svg" type="image/svg+xml"></object>
     </div>
   </body>
 </html>
