Revert "Add intrinsic img dimensions to fix Chrome blank page"
This reverts commit 33bf617a394122c6508009583cbbbf29ba069a2d.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <img src="coffee.svg" alt="Initech Coffee Mug" width="288" height="276">
+      <img src="coffee.svg" alt="Initech Coffee Mug">
     </main>
   </body>
 </html>
